--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
         <!-- tools version setting -->
         <slf4j.version>1.7.7</slf4j.version>
-        <commons-lang3.version>3.3.2</commons-lang3.version>
+        <commons-lang3.version>3.7</commons-lang3.version>
         <commons-io.version>2.4</commons-io.version>
         <commons-codec.version>1.9</commons-codec.version>
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
@@ -47,7 +47,7 @@
         <mssql.driver.version>1.3.1</mssql.driver.version>
 
         <!-- environment setting -->
-        <jdk.version>1.6</jdk.version>
+        <jdk.version>1.8</jdk.version>
         <tomcat.version>2.2</tomcat.version>
         <jetty.version>7.6.14.v20131031</jetty.version>
         <webserver.port>8181</webserver.port>
@@ -59,22 +59,22 @@
     <!-- 设定主仓库，按设定顺序进行查找。 -->
     <repositories>
 
-        <repository>
-            <id>jeesite-repos</id>
-            <name>Jeesite Repository</name>
-            <url>http://maven.jeesite.com/nexus/content/groups/public</url>
-        </repository>
+        <!--<repository>-->
+            <!--<id>jeesite-repos</id>-->
+            <!--<name>Jeesite Repository</name>-->
+            <!--<url>http://maven.jeesite.com/nexus/content/groups/public</url>-->
+        <!--</repository>-->
 
     </repositories>
 
     <!-- 设定插件仓库 -->
     <pluginRepositories>
 
-        <pluginRepository>
-            <id>jeesite-repos</id>
-            <name>Jeesite Repository</name>
-            <url>http://maven.jeesite.com/nexus/content/groups/public</url>
-        </pluginRepository>
+        <!--<pluginRepository>-->
+            <!--<id>jeesite-repos</id>-->
+            <!--<name>Jeesite Repository</name>-->
+            <!--<url>http://maven.jeesite.com/nexus/content/groups/public</url>-->
+        <!--</pluginRepository>-->
 
     </pluginRepositories>
 
@@ -582,6 +582,11 @@
             <artifactId>useragentutils</artifactId>
             <version>1.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-parent</artifactId>
+            <version>1.5.8.RELEASE</version>
+        </dependency>
 
         <!-- 自定义jar依赖包
         <dependency>
@@ -810,6 +815,18 @@
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>${tomcat.version}</version>
+                <configuration>
+                    <port>${webserver.port}</port>
+                    <path>/${project.artifactId}</path>
+                    <uriEncoding>${project.build.sourceEncoding}</uriEncoding>
+                </configuration>
+            </plugin>
+
+            <!-- tomcat8插件 -->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat8-maven-plugin</artifactId>
                 <version>${tomcat.version}</version>
                 <configuration>
                     <port>${webserver.port}</port>
