--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -13,7 +13,7 @@
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://192.168.1.213:3306/wanhutong?useUnicode=true&characterEncoding=utf-8
-jdbc.username=root
+jdbc.username=dev
 jdbc.password=wanhutong
 
 #mssql database setting
