--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -32,9 +32,14 @@ jdbc.pool.maxActive=20
 jdbc.testSql=SELECT 'x' FROM DUAL
 
 #redis settings
-redis.keyPrefix=jeesite
-redis.host=127.0.0.1
-redis.port=6379
+redis.port: 6379
+redis.host: 123.206.60.71
+redis.database: 15
+pool.max-idle: 100
+pool.min-idle: 0
+pool.max-active: 300
+pool.max-wait: 10000
+pool.timeout: 3000
 
 #============================#
 #===== System settings ======#
