商品增加图片

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -165,7 +165,7 @@
 	</servlet>
 	<servlet-mapping>
 	  	<servlet-name>UserfilesDownloadServlet</servlet-name>
-	  	<url-pattern>/userfiles/*</url-pattern>
+	  	<url-pattern>/upload/*</url-pattern>
 	</servlet-mapping>
 	
 	<!-- Validate code -->
