--- a/pom.xml
+++ b/pom.xml
@@ -57,26 +57,26 @@
     </properties>
 
     <!-- 设定主仓库，按设定顺序进行查找。 -->
-    <repositories>
+    <!--<repositories>-->
 
-        <repository>
-            <id>jeesite-repos</id>
-            <name>Jeesite Repository</name>
-            <url>http://123.206.60.71:8081/nexus/content/groups/public</url>
-        </repository>
+        <!--<repository>-->
+            <!--<id>jeesite-repos</id>-->
+            <!--<name>Jeesite Repository</name>-->
+            <!--<url>http://123.206.60.71:8081/nexus/content/groups/public</url>-->
+        <!--</repository>-->
 
-    </repositories>
+    <!--</repositories>-->
 
     <!-- 设定插件仓库 -->
-    <pluginRepositories>
+    <!--<pluginRepositories>-->
 
-        <pluginRepository>
-            <id>jeesite-repos</id>
-            <name>Jeesite Repository</name>
-            <url>http://123.206.60.71:8081/nexus/content/groups/public</url>
-        </pluginRepository>
+        <!--<pluginRepository>-->
+            <!--<id>jeesite-repos</id>-->
+            <!--<name>Jeesite Repository</name>-->
+            <!--<url>http://123.206.60.71:8081/nexus/content/groups/public</url>-->
+        <!--</pluginRepository>-->
 
-    </pluginRepositories>
+    <!--</pluginRepositories>-->
 
     <!-- 依赖项定义 -->
     <dependencies>
@@ -450,6 +450,13 @@
             <artifactId>jackson-module-jaxb-annotations</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.9</version>
+        </dependency>
+
 
         <!-- fastjson json
         <dependency>
