商品分类图片

--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -12,8 +12,8 @@
 #mysql database setting
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://rm-2ze3kz70k2a538vrtyo.mysql.rds.aliyuncs.com:3306/wanhutong?useUnicode=true&characterEncoding=utf-8
-jdbc.url=jdbc:mysql://192.168.1.213:3306/wanhutong?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://rm-2ze3kz70k2a538vrtyo.mysql.rds.aliyuncs.com:3306/wanhutong?useUnicode=true&characterEncoding=utf-8
+#jdbc.url=jdbc:mysql://192.168.1.213:3306/wanhutong?useUnicode=true&characterEncoding=utf-8
 
 jdbc.username=dev
 jdbc.password=wanhutong
