--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -12,10 +12,11 @@
 #mysql database setting
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://rm-2ze3kz70k2a538vrtyo.mysql.rds.aliyuncs.com:3306/wanhutong?useUnicode=true&characterEncoding=utf-8
-#jdbc.url=jdbc:mysql://192.168.1.213:3306/wanhutong?useUnicode=true&characterEncoding=utf-8
+#jdbc.url=jdbc:mysql://rm-2ze3kz70k2a538vrtyo.mysql.rds.aliyuncs.com:3306/wanhutong?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://192.168.1.213:3306/wanhutong_shop?useUnicode=true&characterEncoding=utf-8
 
-jdbc.username=dev
+#jdbc.username=dev
+jdbc.username=root
 jdbc.password=wanhutong
 
 #mssql database setting
@@ -48,7 +49,8 @@ pool.timeout: 3000
 #============================#
 
 #\u4ea7\u54c1\u4fe1\u606f\u8bbe\u7f6e
-productName=\u4E07\u6237\u901A\u4F01\u4E1A\u8FD0\u8425\u7BA1\u7406\u5E73\u53F0
+#\u4E07\u6237\u901A\u4F01\u4E1A\u8FD0\u8425\u7BA1\u7406\u5E73\u53F0
+productName=\u4E07\u6237\u901A\u8FD0\u8425\u7BA1\u7406\u540E\u53F0
 copyrightYear=2018
 version=V1.0.0
 
