--- a/pom.xml
+++ b/pom.xml
@@ -594,6 +594,11 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>2.8.2</version>
+        </dependency>
 
         <!-- 自定义jar依赖包
         <dependency>
