--- a/pom.xml
+++ b/pom.xml
@@ -600,6 +600,13 @@
             <version>2.8.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
+
         <!-- 自定义jar依赖包
         <dependency>
             <groupId>com.wanhutong.backend</groupId>
