--- a/pom.xml
+++ b/pom.xml
@@ -599,6 +599,11 @@
             <artifactId>aliyun-sdk-oss</artifactId>
             <version>2.8.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.0</version>
+        </dependency>
 
         <dependency>
             <groupId>com.belerweb</groupId>
