--- a/pom.xml
+++ b/pom.xml
@@ -923,7 +923,7 @@
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/lib</outputDirectory>
+                            <outputDirectory>${project.build.directory}/${project.artifactId}/WEB-INF/lib</outputDirectory>
                             <includeScope>system</includeScope>
                         </configuration>
                     </execution>
