--- a/pom.xml
+++ b/pom.xml
@@ -574,9 +574,9 @@
         <dependency>
             <groupId>com.ckfinder</groupId>
             <artifactId>ckfinderplugin-imageresize</artifactId>
-            <scope>system</scope>
+            <!--<scope>system</scope>-->
             <!--<systemPath>${project.basedir}/lib/ckfinderplugin-imageresize-2.3.jar</systemPath>-->
-            <!--<version>2.3</version>-->
+            <version>2.3</version>
         </dependency>
         <!-- CKFinder end -->
 
@@ -915,6 +915,19 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.5.1</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/${project.artifactId}/WEB-INF/lib</outputDirectory>
+                            <includeScope>system</includeScope>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
