--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -97,6 +97,7 @@ session.sessionTimeout=1800000
 session.sessionTimeoutClean=120000
 
 #\u7F13\u5B58\u8BBE\u7F6E
+#ehcache.configFile=cache/ehcache-local.xml
 ehcache.configFile=cache/ehcache-local.xml
 #ehcache.configFile=cache/ehcache-rmi.xml
 
