--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -43,9 +43,12 @@ jdbc.pool.maxActive=20
 jdbc.testSql=SELECT 'x' FROM DUAL
 
 #redis settings
-redis.port: 6379
-redis.host: 123.206.60.71
-redis.database: 15
+redis.port=6066
+redis.host=192.168.1.213
+redis.database=15
+redis.password=whg2018
+redis.timeout=600
+
 pool.max-idle: 100
 pool.min-idle: 0
 pool.max-active: 300
