1.供应商产品审核

--- a/src/main/resources/oss.properties
+++ b/src/main/resources/oss.properties
@@ -1,4 +1,4 @@
-#∞¢¿Ô‘∆OSS∑˛ŒÒ≈‰÷√
+#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFDOSS\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 endpoint=img-dev.wanhugou.cn
 accessKeyId=LTAIwe7h37GPqoZi
 accessKeySecret=Kz8ytdPDdg0spOlwlA2DvWrV88N9Vm
