1.供应商产品审核

--- a/src/main/resources/oss.properties
+++ b/src/main/resources/oss.properties
@@ -1,5 +1,5 @@
 #\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFDOSS\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
-endpoint=img-dev.wanhugou.cn
+endpoint=img-dev.wanhutong.com
 accessKeyId=LTAIwe7h37GPqoZi
 accessKeySecret=Kz8ytdPDdg0spOlwlA2DvWrV88N9Vm
 bucketName=wht-dev
