--- a/pom.xml
+++ b/pom.xml
@@ -650,6 +650,26 @@
             </exclusions>
         </dependency> -->
 
+        <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-juli -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-juli</artifactId>
+            <version>9.0.7</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>tomcat-redis-session-manager</groupId>
+            <artifactId>tomcat-redis-session-manager</artifactId>
+            <version>2.0.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/tomcat-redis-session-manager-2.0.0.jar</systemPath>
+        </dependency>
+
     </dependencies>
 
     <build>
