--- a/pom.xml
+++ b/pom.xml
@@ -539,8 +539,8 @@
             <groupId>org.wltea</groupId>
             <artifactId>analyzer</artifactId>
             <version>2012_u6</version>
-            <!--<scope>system</scope>-->
-            <!--<systemPath>${project.basedir}/lib/analyzer-2012_u6.jar</systemPath>-->
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/analyzer-2012_u6.jar</systemPath>
         </dependency>
         <!-- GENERAL UTILS end -->
 
@@ -554,28 +554,28 @@
             <groupId>com.ckfinder</groupId>
             <artifactId>apache-ant-zip</artifactId>
             <version>2.3</version>
-            <!--<scope>system</scope>-->
-            <!--<systemPath>${project.basedir}/lib/apache-ant-zip-2.3.jar</systemPath>-->
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/apache-ant-zip-2.3.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.ckfinder</groupId>
             <artifactId>ckfinder</artifactId>
             <version>2.3</version>
-            <!--<scope>system</scope>-->
-            <!--<systemPath>${project.basedir}/lib/ckfinder-2.3.jar</systemPath>-->
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/ckfinder-2.3.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.ckfinder</groupId>
             <artifactId>ckfinderplugin-fileeditor</artifactId>
             <version>2.3</version>
-            <!--<scope>system</scope>-->
-            <!--<systemPath>${project.basedir}/lib/ckfinderplugin-fileeditor-2.3.jar</systemPath>-->
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/ckfinderplugin-fileeditor-2.3.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.ckfinder</groupId>
             <artifactId>ckfinderplugin-imageresize</artifactId>
-            <!--<scope>system</scope>-->
-            <!--<systemPath>${project.basedir}/lib/ckfinderplugin-imageresize-2.3.jar</systemPath>-->
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/ckfinderplugin-imageresize-2.3.jar</systemPath>
             <version>2.3</version>
         </dependency>
         <!-- CKFinder end -->
@@ -598,8 +598,8 @@
             <groupId>bitwalker</groupId>
             <artifactId>useragentutils</artifactId>
             <version>1.13</version>
-            <!--<scope>system</scope>-->
-            <!--<systemPath>${project.basedir}/lib/UserAgentUtils-1.13.jar</systemPath>-->
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/UserAgentUtils-1.13.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -624,14 +624,14 @@
         </dependency>
 
 
-        <!-- 自定义jar依赖包
-        <dependency>
-            <groupId>com.wanhutong.backend</groupId>
-            <artifactId>test-core</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/test-core-1.0.jar</systemPath>
-        </dependency> -->
+        <!-- 自定义jar依赖包-->
+        <!--<dependency>-->
+            <!--<groupId>com.wanhutong.backend</groupId>-->
+            <!--<artifactId>test-core</artifactId>-->
+            <!--<version>1.0</version>-->
+            <!--<scope>system</scope>-->
+            <!--<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/test-core-1.0.jar</systemPath>-->
+        <!--</dependency>-->
 
         <!-- 使用 Jetty JSP引擎
         <dependency>
