--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -12,15 +12,15 @@
 #mysql database setting
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://rm-2ze52rfd8qhi2m7vco.mysql.rds.aliyuncs.com:3306/wanhutong_prod?useUnicode=true&characterEncoding=utf-8
+#jdbc.url=jdbc:mysql://rm-2ze52rfd8qhi2m7vco.mysql.rds.aliyuncs.com:3306/wanhutong_prod?useUnicode=true&characterEncoding=utf-8
 #\u5728\u5BB6\u5F00\u53D1
-#jdbc.url=jdbc:mysql://124.204.36.165:3306/wanhutong_test?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://124.204.36.165:3306/wanhutong_test?useUnicode=true&characterEncoding=utf-8
 #jdbc.url=jdbc:mysql://124.204.36.165:3306/wanhutong_prod?useUnicode=true&characterEncoding=utf-8
 ####jdbc.url=jdbc:mysql://192.168.1.213:3306/wanhutong_shop?useUnicode=true&characterEncoding=utf-8
 ###
 ###jdbc.username=dev
-jdbc.username=wanhutong
-jdbc.password=Wht180207
+jdbc.username=root
+jdbc.password=wanhutong
 
 
 
