--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -8,9 +8,21 @@ log4j.appender.Console.layout.ConversionPattern=%d %-5p [%c{5}] - %m%n
 
 #RollingFile
 log4j.appender.RollingFile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.RollingFile.File=../logs/jeesite/jeesite.log
+log4j.appender.RollingFile.File=../logs/jeesite/jeesite2.log
 log4j.appender.RollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.RollingFile.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
+
+
+log4j.logger.requestPay= DEBUG, payMoney
+#log4j.additivity.myTest1 = false
+log4j.appender.payMoney=org.apache.log4j.FileAppender
+log4j.appender.payMoney.File=../logs/jeesite/payMoney.log
+log4j.appender.payMoney.layout=org.apache.log4j.PatternLayout
+log4j.appender.payMoney.layout.ConversionPattern=%d %p [%c] - %m%n
+
+
+
+
 
 log4j.logger.java.sql=DEBUG
 
