1.邮件工具类

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -21,6 +21,14 @@ log4j.appender.payMoney.layout=org.apache.log4j.PatternLayout
 log4j.appender.payMoney.layout.ConversionPattern=%d %p [%c] - %m%n
 
 
+log4j.logger.email= DEBUG, email
+#log4j.additivity.myTest1 = false
+log4j.appender.email=org.apache.log4j.FileAppender
+log4j.appender.email.File=../logs/jeesite/email.log
+log4j.appender.email.layout=org.apache.log4j.PatternLayout
+log4j.appender.email.layout.ConversionPattern=%d %p [%c] - %m%n
+
+
 
 
 
