--- a/pom.xml
+++ b/pom.xml
@@ -645,6 +645,12 @@
             <artifactId>aliyun-java-sdk-dm</artifactId>
             <version>3.3.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.aliyun/aliyun-java-sdk-dysmsapi -->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
+            <version>1.1.0</version>
+        </dependency>
 
 
         <!-- 自定义jar依赖包-->
