--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -15,7 +15,7 @@ jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://rm-2ze3kz70k2a538vrtyo.mysql.rds.aliyuncs.com:3306/wanhutong_prod?useUnicode=true&characterEncoding=utf-8
 
 #\u5728\u5BB6\u5F00\u53D1
-jdbc.url=jdbc:mysql://124.204.36.165:3306/wanhutong_dev?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://124.204.36.165:3306/wanhutong_test?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=wanhutong
 #jdbc.url=jdbc:mysql://124.204.36.165:3306/wanhutong_prod?useUnicode=true&characterEncoding=utf-8
@@ -49,7 +49,7 @@ jdbc.testSql=SELECT 'x' FROM DUAL
 #redis settings
 redis.port=6066
 redis.host=192.168.1.213
-redis.database=15
+redis.database=13
 redis.password=whg2018
 redis.timeout=600
 
