--- a/pom.xml
+++ b/pom.xml
@@ -652,6 +652,12 @@
             <version>1.1.0</version>
         </dependency>
 
+        <!--Sentry-->
+        <dependency>
+            <groupId>io.sentry</groupId>
+            <artifactId>sentry-log4j</artifactId>
+            <version>1.7.5</version>
+        </dependency>
 
         <!-- 自定义jar依赖包-->
         <!--<dependency>-->
