--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Output pattern : date [thread] priority category - message   FATAL 0  ERROR 3  WARN 4  INFO 6  DEBUG 7 
-log4j.rootLogger=WARN, Console, RollingFile
+log4j.rootLogger=WARN, Console, RollingFile, payMoney, email, Sentry
 
 #Console
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
@@ -28,6 +28,9 @@ log4j.appender.email.File=../logs/jeesite/email.log
 log4j.appender.email.layout=org.apache.log4j.PatternLayout
 log4j.appender.email.layout.ConversionPattern=%d %p [%c] - %m%n
 
+# Configure the Sentry appender, overriding the logging threshold to the WARN level
+log4j.appender.Sentry=io.sentry.log4j.SentryAppender
+log4j.appender.Sentry.threshold=WARN
 
 
 
