--- a/src/main/resources/wanhugou.properties
+++ b/src/main/resources/wanhugou.properties
@@ -4,8 +4,16 @@ oldImgServer=http://images.wanhugou.cn
 appId=whtFWQ0NXyXHdnKmIS
 notifyUrl=http://124.204.36.166:88/biz/payMoney/payMoneyIng
 
-wxPostUrl=http://api.payment.wanhutong.com/payment/wx/appPay
-alipayPostUrl=http://api.payment.wanhutong.com/payment/alipay/qrPay/
+#wxPostUrl=http://api.payment.wanhutong.com/payment/wx/appPay
+#alipayPostUrl=http://api.payment.wanhutong.com/payment/alipay/qrPay/
+wxPostUrl=http://192.168.1.69/payment/wx/appPay
+alipayPostUrl=http://192.168.1.69/payment/alipay/qrPay/
+
+#WECHAT_APPID=wxa0e6f9658f1d428d
+#WECHAT_SECRET=998048e427c1956579ab8e3134152250
+
+WECHAT_APPID=wx1ef02ee291b80d35
+WECHAT_SECRET=24271c2f3f34b79dcab501e4d1c2cb5e
 
 logisticUrl=http://wuliu.guojingec.com:8080/wuliu/order/logistic/info
 
