--- a/src/main/resources/wanhugou.properties
+++ b/src/main/resources/wanhugou.properties
@@ -14,6 +14,7 @@ alipayPostUrl=http://192.168.1.69/payment/alipay/qrPay/
 
 WECHAT_APPID=wx1ef02ee291b80d35
 WECHAT_SECRET=24271c2f3f34b79dcab501e4d1c2cb5e
+WECHAT_MCH_SECRET=FC8789C74A404240B5CEA7DA9C32A2B8
 
 logisticUrl=http://wuliu.guojingec.com:8080/wuliu/order/logistic/info
 
