1.支付宝H5支付

--- a/src/main/resources/wanhugou.properties
+++ b/src/main/resources/wanhugou.properties
@@ -4,12 +4,12 @@ oldImgServer=http://images.wanhugou.cn
 appId=whtFWQ0NXyXHdnKmIS
 notifyUrl=http://124.204.36.166:88/biz/payMoney/payMoneyIng
 
-wxPostUrl=http://api.payment.wanhutong.com/payment/wx/appPay
-alipayPostUrl=http://api.payment.wanhutong.com/payment/alipay/qrPay/
-alipay4h5PostUrl=http://api.payment.wanhutong.com/payment/alipay/pay4h5/
-#wxPostUrl=http://192.168.1.69/payment/wx/appPay
-#alipayPostUrl=http://192.168.1.69/payment/alipay/qrPay/
-#alipay4h5PostUrl=http://192.168.1.69/payment/alipay/pay4h5/
+#wxPostUrl=http://api.payment.wanhutong.com/payment/wx/appPay
+#alipayPostUrl=http://api.payment.wanhutong.com/payment/alipay/qrPay/
+#alipay4h5PostUrl=http://api.payment.wanhutong.com/payment/alipay/pay4h5/
+wxPostUrl=http://192.168.1.69/payment/wx/appPay
+alipayPostUrl=http://192.168.1.69/payment/alipay/qrPay/
+alipay4h5PostUrl=http://192.168.1.69/payment/alipay/pay4h5/
 
 #WECHAT_APPID=wxa0e6f9658f1d428d
 #WECHAT_SECRET=998048e427c1956579ab8e3134152250
