--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -151,3 +151,4 @@ sms.default.accessKeyId=LTAI9LHmIeAJEOOy
 sms.default.accessKeySecret=niCor8FxoaKwfjhaPC5t1Yt8DLG3Mz
 
 mqtt.host=tcp://192.168.1.213:1883
+#mqtt.host=tcp://47.93.239.167:1883
