物流运单生成

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -28,6 +28,13 @@ log4j.appender.email.File=../logs/jeesite/email.log
 log4j.appender.email.layout=org.apache.log4j.PatternLayout
 log4j.appender.email.layout.ConversionPattern=%d %p [%c] - %m%n
 
+log4j.logger.logistics= DEBUG, logistics
+#log4j.additivity.myTest1 = false
+log4j.appender.logistics=org.apache.log4j.FileAppender
+log4j.appender.logistics.File=../logs/jeesite/logistics.log
+log4j.appender.logistics.layout=org.apache.log4j.PatternLayout
+log4j.appender.logistics.layout.ConversionPattern=%d %p [%c] - %m%n
+
 # Configure the Sentry appender, overriding the logging threshold to the WARN level
 log4j.appender.Sentry=io.sentry.log4j.SentryAppender
 log4j.appender.Sentry.threshold=WARN
